fix pagination load more spacing

--- a/app/assets/stylesheets/videos/index/load_more.scss
+++ b/app/assets/stylesheets/videos/index/load_more.scss
@@ -1,7 +1,7 @@
 .loadMoreContainer {
   display: flex;
   flex-direction: column;
-  margin: 1rem 0;
+  margin: 3rem 0;
 }
 
 .loadMoreResults {
