--- a/app/assets/stylesheets/videos/index/videos.scss
+++ b/app/assets/stylesheets/videos/index/videos.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1rem 1rem;
-  margin: 0 10px 50px 10px;
+  margin: 0 10px 10px 10px;
 }
 
 .video-container {
